# COMP3520-FinalProject

./: .gitignore  .make.sh  CMakeLists.txt  camera.h  display.cxx  display.h  glad.cxx  main.cxx  make.sh  mesh.cxx  mesh.h  model.cxx  model.h  readme.md  shader.cxx  shader.h  texture.cxx  texture.h  transform.h
models/csgo-awp/: Model.mtl
shaders/: lightShader.fs  lightShader.vs  shader.fs  shader.vs
